2005-03-02 David Brown <dmlb2000@excite.com>
	* latest.defaults updated latest to 2.6.11-rc5-mm1
	* info/patches/mm_patches/2.6.11-rc5-mm1 added
	* info/patches/mm_patches/2.6.10-mm2 deleted

2005-03-03 David Brown <dmlb2000@excite.com>
	* latest.defaults: updated PRE_2_6 patch to 2.6.11
	* info/patches/PRE_2_6/patch-2.6.11 added

2005-03-03 Ladislav Hagara <hgr@vabo.cz>
	* latest.defaults: 2.6.11
	* info/kernels/2.6.11: added

2005-02-27 David Brown <dmlb2000@excite.com>
	* DETAILS: updated to add patches short to SHORT
	* PREPARE: updated to add SHORT
	* PRE_BUILD: added unpack just for md5sum check... :-\

2005-02-25 David Brown <dmlb2000@excite.com>
        * latest.defaults: updated ck_patches to 2.6.10-ck6
        * info/patches/mm_patches/2.6.10-ck6 added

2005-02-24 David Brown <dmlb2000@excite.com>
        * latest.defaults: updated PRE_2_6 to 2.6.11-rc5
        * info/patches/mm_patches/2.6.11-rc5 added
        * info/patches/mm_patches/2.6.10-rc1 deleted

2005-02-23 David Brown <dmlb2000@excite.com>
	* latest.defaults: updated mm to 2.6.11-rc4-mm1
	* info/patches/mm_patches/2.6.11-rc4-mm1 added
	* info/patches/mm_patches/2.6.10-mm5 deleted

2005-02-14 David Brown <dmlb2000@excite.com>
	* latest.defaults: updated pre 2.6 patches and as sources
	* info/patches/PRE_2_6/patch-2.6.9 deleted
	* info/patches/as_patches/patch-2.6.10-as3 added
	* info/patches/PRE_2_6/patch-2.6.11-rc4 added

2005-02-13 David Brown <dmlb2000@excite.com>
	* PRE_BUILD: fixed linux_new_uncompress to include ASCII because some
	  patches don't come up as diffs or patchfiles

2005-02-12 David Brown <dmlb2000@excite.com>
	* BUILD, PRE_BUILD, INSTALL, FINAL: added && everywhere
	  and cleaned up commented deprecated features also added
	  colored output to the message text
	* PREPARE: added post_patch variable to patchfiles
	  post_patch contains a space separated list of patches that
	  are required to be patched after the current patch is complete.