@@ -1,6 +1,0 @@
-appliedkernels="2.6.10"
-depends="patch-2.6.11-rc2"
-patchversion="2.6.11-rc2-ck1"
-source="${patchversion}.diff.bz2"
-source_url="http://ck.kolivas.org/patches/2.6/2.6.11-rc2/${source}"
-txtmessage="${PROBLEM_COLOR}Don't compile with iptables modules they won't compile, well tried that still didn't work, so if you can get it to compile good for you ;)${DEFAULT_COLOR}"
