@@ -1,0 +1,4 @@
+appliedkernels="2.6.11"
+patchversion="${appliedkernels}-ck1"
+source="patch-${patchversion}.bz2"
+source_url="http://ck.kolivas.org/patches/2.6/${appliedkernels}/${patchversion}/${source}"
