@@ -1,0 +1,4 @@
+appliedkernels="2.6.11"
+patchversion="${appliedkernels}-cko1"
+source="patch-${patchversion}.bz2"
+source_url="http://kem.p.lodz.pl/~peter/cko/rel/$source"
