@@ -12,8 +12,8 @@ LATEST_grsec_secfix_2_4=linux-2.4.28-secfix-200501071141.patch
 LATEST_grsecurity_2_6=grsecurity-2.1.0-2.6.10-200501081640.patch
 LATEST_grsec_secfix_2_6=linux-2.6.10-secfix-200501071130.patch
 LATEST_nitro_patches=patch-2.6.11-rc1-nitro0
-LATEST_ck_patches=patch-2.6.10-ck6
-LATEST_cko_patches=patch-2.6.10-cko3
+LATEST_ck_patches=patch-2.6.11-ck1
+LATEST_cko_patches=patch-2.6.11-cko1
 LATEST_as_patches=patch-2.6.10-as3
 LATEST_mppe_mppc_patches=linux-2.6.10-mppe-mppc-1.2.patch
 LATEST_wbsd_patches=wbsd-2.6.10-6.patch
