@@ -1,4 +1,13 @@
 2005-03-02 David Brown <dmlb2000@excite.com>
+	* latest.defaults updated latest to patch-2.6.11-cko1
+	* info/patches/cko_patches/patch-2.6.11-cko1 added
+
+2005-03-02 David Brown <dmlb2000@excite.com>
+	* latest.defaults updated latest to patch-2.6.11-ck1
+	* info/patches/ck_patches/patch-2.6.11-ck1 added
+	* info/patches/ck_patches/2.6.11-rc2-ck1.diff deleted
+
+2005-03-02 David Brown <dmlb2000@excite.com>
 	* latest.defaults updated latest to 2.6.11-rc5-mm1
 	* info/patches/mm_patches/2.6.11-rc5-mm1 added
 	* info/patches/mm_patches/2.6.10-mm2 deleted
